tests/asm-link/_consistency/section-union/assert/rgbasm.err
error: assertion failed
    ╭─[ one-two.asm:11:9 ]
    │
 11 │     assert @ != BASE, "Force failing the build" ; Force failure in RGBLINK, though
    │            ────┬────  
    │                ╰────── Force failing the build
────╯
1 error generated.
